--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
    "name": "dboun",
-   "version": "1.0.1",
+   "version": "1.0.2",
    "description": "A utility to debounce functions for better performance and control.",
    "main": "./index.js",
-   "scripts": {
-      "start": "makepack serve",
-      "pack": "makepack pack",
-      "publish:pack": "makepack pack -p",
-      "test": "jest",
-      "build": "tsc"
+   "module": "./esm/index.js",
+   "types": "./types/index.d.ts",
+   "exports": {
+      ".": {
+         "types": "./types/index.d.ts",
+         "import": "./index.js",
+         "require": "./cjs/index.js"
+      },
+      "./types/*": "./types/*.d.ts",
+      "./cjs/*": "./cjs/*.js",
+      "./*": {
+         "import": "./*.js",
+         "require": "./cjs/*.js"
+      }
    },
-   "dependencies": {},
+   "scripts": {
+      "start": "makepack start",
+      "build": "makepack build",
+      "build:publish": "makepack publish"
+   },
    "devDependencies": {
-      "makepack": "latest",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "typescript": "^4.4.2",
+      "@types/jest": "^29.0.0",
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
       "jest": "^29.0.0",
-      "@types/jest": "^29.0.0"
+      "makepack": "^1.5.5",
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0",
+      "typescript": "^4.4.2"
    },
    "keywords": [
       "debounce",
